--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
